public/new.css
* {
    margin: 0px;
}

body {
    height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    overflow: hidden;
    transition: background-color 200ms;
}

::-webkit-scrollbar {
    width: 8px;
    background-color: transparent;
    border-radius: 4px;
    transition: background-color 100ms;
}

::-webkit-scrollbar-thumb {
    background-color: rgb(176, 176, 176);
    border-radius: 4px;
    cursor: pointer;
}

::-webkit-scrollbar-thumb:active {
    background-color: rgb(150, 150, 150);
}

.new-note {
    display: flex;
    flex-direction: column;
    height: 80%;
    max-height: 500px;
    padding: 10px;
    width: 90%;
    max-width: 700px;
    gap: 12px;
    border-radius: 5px;
    position: relative;
    z-index: 00;
}

.blue {
    background-color: rgb(148, 200, 238);
}

.pale-blue {
    background-color: rgb(204, 237, 252);
}

.green {
    background-color: rgb(199, 239, 139);
}

.pale-green {
    background-color: rgb(218, 242, 182);
}

.new-note header {
    display: flex;
    gap: 26px;
    align-items: center;
}

.new-note header h1 {
    font-family: 'Roboto Slab';
    font-weight: 500;
    flex: 1;
}

.new-note header button {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    border: none;
    height: fit-content;
    width: fit-content;
    padding: 2px;
    background-color: transparent;
    opacity: 0;
    transition: opacity 100ms, color 100ms;
}

.new-note header button i {
    font-size: 28px;
    cursor: pointer;
}

.new-note:hover header button {
    opacity: 1;
    color: rgba(0, 0, 0, 0.5);
}

.new-note header button i:hover {
    color: rgba(0, 0, 0, 0.7);
}

.new-note header button .hover-note {
    font-family: 'Roboto Slab';
    opacity: 0;
    font-size: 16px;
    position: absolute;
    bottom: -16px;
    transition: opacity 100ms;
}

.new-note header button i:hover + label {
    opacity: 1;
}

.new-note main {
    display: flex;
    flex-direction: column;
    gap: 4px;
    height: 80%;
    max-height: 600px;
}

.new-note main label .title-input,
.new-note main .content-input {
    border: none;
    padding: 0px;
    outline: none;
    font-family: 'Roboto Slab';
}

.new-note main label {
    width: 100%;
    display: grid;
    grid-template-rows: fit-content 1px;
    position: relative;
}

.new-note main label .title-input {
    width: calc(100% - 10px);
    font-size: 24px;
    padding: 5px;
    background-color: transparent;
    font-weight: 500;
}

.new-note main label .title-input::placeholder,
.new-note main .content-input::placeholder {
    opacity: 0.4;
}

.new-note main label hr {
    border: none;
    height: 2px;
    padding: 0px 2px 0px 2px;
    border-radius: 1px;
}

.new-note main label .focus-underline {
    background-color: rgba(0, 0, 0, 0.5);
    transform-origin: left;
    transform: scaleX(0);
    transition: transform 300ms;
}

.new-note main label .title-input:focus + hr {
    transform: scaleX(1);
}

.new-note main label .underline {
    background-color: rgba(0, 0, 0, 0.1);
    position: relative;
    top: -2px;
}

.new-note main .content-input {
    resize: none;
    height: 208px;
    padding: 5px;
    background-color: transparent;
    color: rgba(0, 0, 0, 0.7);
    font-weight: 400;
    font-size: 20px;
    flex: 1;
}

a {
    text-decoration: none;
}

.new-note header button .close {
    position: relative;
    top: 1px;
    font-size: 36px;
}

.new-note header button .delete-button {
    font-size: 24px;
}

.error {
    height: 20px;
    font-size: 16px;
    font-family: 'Roboto Slab';
    color: red;
}

.new-note header button .share-button {
    font-size: 28px;
}

.show-users-button {
    position: fixed;
    bottom: 4px;
    font-size: 20px;
    height: 52px;
    width: 52px;
    border-radius: 50%;
    background-color: white;
    box-shadow: 0 0 5px black;
    color: gray;
    border: none;
    transition: background-color 200ms;
    z-index: 100;
}

.show-users-button:hover {
    background-color: rgb(225, 225, 225);
}

.editors-wrapper {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    display: flex;
    flex-direction: column;
    width: calc(90% - 16px);
    max-width: 284px;
    height: fit-content;
    max-height: 200px;
    min-width: 104px;
    padding: 20px 8px 60px 8px;
    position: fixed;
    gap: 4px;
    bottom: 0px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    overflow-y: auto;
    transform: scaleY(1);
    transform-origin: bottom;
    transition: transform 200ms;
}

.editors-wrapper::-webkit-scrollbar {
    display: none;
}

.editor {
    display: flex;
    align-items: center;
    font-size: 24px;
    padding: 12px;
    border-radius: 12px;
}

.editor span {
    flex: 1;
}

.delete-editor-button {
    color: rgb(254, 89, 89);
    cursor: pointer;
}

.hide {
    transform: scaleY(0);
}

.flip {
    transform: scaleY(-1);
}

@media only screen and (max-width: 600px) {
    body {
        align-items: flex-start;
        width: 100vw;
    }
    body .new-note {
        height: 400px;
        background-color: transparent;
        border: none;
        width: 90%;
        max-width: none;
        gap: 32px;
        height: calc(100% - 20px);
    }

    .new-note header {
        font-size: 20px;
        gap: 26px;
    }

    .new-note header i {
        opacity: 1;
    }

    .new-note header button .close {
        font-size: 36px;
    }

    .new-note header button {
        opacity: 0.5;
    }

    .new-note main label .focus-underline {
        background-color: rgba(0, 0, 0, 1);
    }

    .new-note main label .title-input {
        font-size: 24px;
    }

    .new-note main .content-input {
        font-size: 20px;
        flex: 1;
    }
}

